# aci-export

./: .env.example  .gitignore  Cargo.toml  README.md  ddb_primer.md  railway.json
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  settings.rs
cli/src/cmd/: mod.rs
cli/src/cmd/ddb/: clubs.rs  regions.rs
cli/src/cmd/mailchimp/: lists.rs  members.rs  merge_fields.rs  mod.rs  ping.rs
data/: aci-all.toml  club-013.toml  club-024.toml  fields-all.toml  fields-club.toml  fields-members.toml  intraclub-indie.toml  region-03.toml
db/: Cargo.toml
db/migrations/: 20250228061114_create_members.sql
db/src/: address.rs  brn.rs  club.rs  leadership.rs  lib.rs  member.rs  region.rs  standing_committee.rs  user.rs
db/src/cmd/: addresses.rs  brns.rs  clubs.rs  international.rs  members.rs  mod.rs  regions.rs  standing_committees.rs  users.rs
ddb/: Cargo.toml
ddb/src/: addresses.rs  airstreams.rs  clubs.rs  error.rs  leadership.rs  lib.rs  member.rs  members.rs  races.rs  regions.rs  roles.rs  standing_committees.rs  user.rs  users.rs
ddb/src/cmd/: clubs.rs  international.rs  members.rs  mod.rs  regions.rs  standing_committees.rs  users.rs
mailchimp/: Cargo.toml
mailchimp/data/: fields-all.toml  fields-club.toml
mailchimp/src/: batches.rs  error.rs  health.rs  lib.rs  list.rs  lists.rs  main.rs  members.rs  merge_fields.rs
mailchimp/src/cmd/: lists.rs  members.rs  merge_fields.rs  mod.rs  ping.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  settings.rs
server/src/cron/: mailchimp.rs
src/: lib.rs  mailchimp.rs  main.rs  settings.rs
src/cmd/: mailchimp.rs  members.rs  mod.rs  users.rs
src/cmd/ddb/: clubs.rs  members.rs  mod.rs  regions.rs  users.rs
src/cmd/mailchimp/: lists.rs  members.rs  merge_fields.rs  mod.rs  ping.rs
supabase/: config.toml
supabase/migrations/: 20241130113349_create_mailchimp_table.sql
sync-app/: Cargo.toml  Dockerfile  railway.json  railway.toml
sync-app/migrations/: 20250228061114_create_members.sql  20251128175041_club_primary_uid.sql  20251208120000_create_leadership_tables.sql  20251208185056_member_class_complimentary.sql  20251209120000_region_primary_uid.sql  20251209120001_club_region_uid.sql  20251227120000_create_standing_committees.sql  20251227120001_remove_pii_restrict_regions.sql
sync-app/src/: address.rs  brn.rs  club.rs  lib.rs  main.rs  member.rs  region.rs  server.rs  settings.rs  sync.rs  user.rs
sync-app/src/cmd/: migrate.rs  mod.rs  run.rs
sync-app/src/cron/: mod.rs  sync_db.rs
sync-mail/: Cargo.toml  Dockerfile  railway.json  railway.toml
sync-mail/migrations/: 20250520093222_sync_table.sql
sync-mail/src/: lib.rs  mailchimp.rs  main.rs  settings.rs
sync-mail/src/cmd/: create.rs  delete.rs  fields.rs  list.rs  migrate.rs  mod.rs  run.rs  update.rs
sync-mailchimp/: Cargo.toml
sync-mailchimp/src/: main.rs  settings.rs
sync-mailchimp/src/cron/: mod.rs
sync-server/: Cargo.toml
sync-server/src/: lib.rs  server.rs  settings.rs  sync-cli.rs  sync-shuttle.rs
sync-server/src/api/: mod.rs
sync-server/src/cmd/: app.rs  mail.rs  mod.rs
sync-server/src/cron/: db.rs  mailchimp.rs  mod.rs
