
[workspace]
members = ["ddb", "mailchimp", "cli"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "*", features = ["serde"] }
sqlx = { version = "0", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
tokio = { version = "1", features = ["full"] }
