[workspace]
members = ["ddb", "mailchimp", "cli", "db", "sync-server"]
resolver = "2"

[workspace.dependencies]
futures = "0"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
sqlx = { version = "0", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "postgres",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-retry2 = "0"
config = { version = "0", default-features = false, features = ["toml"] }
tracing = "0.1"
itertools = "0"
