[package]
name = "db"
version = "0.1.2"
edition.workspace = true

[dependencies]
config = { version = "0", default-features = false, features = ["toml"] }
tokio-cron-scheduler = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-graceful-shutdown = "0"
sha2 = "0.10"
base64 = "0.22"
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
