[package]
name = "aci-ddb"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
chrono = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
sqlx = { workspace = true }
itertools = { workspace = true }
mailchimp = { package = "mailchimp", path = "../mailchimp" }
