[package]
name = "aci-ddb"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "aci-ddb"
path = "src/main.rs"
doc = false

[dependencies]
thiserror = "1"
chrono = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
sqlx = { workspace = true }
itertools = { workspace = true }
mailchimp = { package = "mailchimp", path = "../mailchimp" }
db = { package = "db", path = "../db" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
csv = "1"
tokio = { workspace = true }
