[package]
name = "mailchimp"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "aci-mailchimp"
path = "src/main.rs"
doc = false

[dependencies]
base64 = ">=0.21"
thiserror = "1"
reqwest = { version = "0", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
url = "*"
md5 = "0"
tokio-retry2 = { version = "0", features = ["implicit_results", "jitter"] }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
csv = "1"
sqlx = { workspace = true }
